feat(verification): close all audit items for renter license verification
P0: Fix deployment env vars - ONFIDO provider, face-match threshold, selfie required
P1: Frontend selfie now required in UI + submit validation
P1: Auto-approval checks license expiry before approving
P2: MIME vs magic-bytes cross-validation in file upload
P2: Populate faceMatchPassed, qualityFlag, qualityFlagReason in processing flow
P2: Fix test suite - constructor/mock migration, assertion corrections
Fix: Change default provider from REGULA (non-existent) to ONFIDO
Fix: SELFIE enum isRequired=true so profile completeness includes selfie

All 60 unit tests pass (0 failures, 0 errors).